<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:drawingCacheQuality="high" android:background="@drawable/degrade4">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout1" android:layout_weight="12"
		android:layout_height="0px">
		<Button android:text="@string/Bt1About" android:layout_weight="33"
			android:layout_height="fill_parent" android:layout_width="wrap_content"
			android:id="@+id/BtAbout" style="@style/ButtonGlass"></Button>
		<Button android:text="@string/Bt1Help" android:layout_weight="33"
			android:layout_height="fill_parent" android:layout_width="wrap_content"
			android:id="@+id/BtHelp" style="@style/ButtonGlass"></Button>
		<Button android:text="@string/Bt1Language"
			android:layout_weight="34" android:layout_height="fill_parent"
			android:layout_width="wrap_content" android:id="@+id/BtLang"
			style="@style/ButtonGlass"></Button>
	</LinearLayout>
	<ImageView android:id="@+id/imageView1" android:layout_width="fill_parent"
		android:layout_weight="45" android:layout_height="0px"
		android:paddingLeft="5dp" android:paddingRight="5dp"
		android:paddingBottom="5dp" android:layout_marginBottom="5dp"></ImageView>
	<Button android:layout_width="fill_parent" android:text="@string/Bt1SelectRest"
		android:layout_weight="40" android:layout_height="0px" android:id="@+id/BtSelRest"
		android:textSize="30dp" style="@style/ButtonGlass"></Button>
	<Button android:layout_width="fill_parent" android:text="@string/Bt1ManAcc"
		android:layout_height="0px" android:layout_weight="20" android:id="@+id/BtManAcc"
		android:textSize="30dp" style="@style/ButtonGlass" ></Button>
</LinearLayout>
